--- a/FTC-Timer-Display/FTC-Timer-Display.csproj
+++ b/FTC-Timer-Display/FTC-Timer-Display.csproj
@@ -556,6 +556,8 @@
     <None Include="Resources\Gcolonoff.png" />
     <None Include="Resources\FIRST-Regional-InVirginia-Icon-v-allBlack.png" />
     <None Include="Resources\vortexlogo.png" />
+    <None Include="Resources\FCLogo.png" />
+    <None Include="Resources\FCLogoBlack.png" />
     <Content Include="Sounds\GameSounds\charge.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
