--- a/FTC-Timer-Display/App.config
+++ b/FTC-Timer-Display/App.config
@@ -56,7 +56,7 @@
       <setting name="showHelp" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="customLogoPath" serializeAs="String">
+      <setting name="customLogoPath1" serializeAs="String">
         <value />
       </setting>
       <setting name="displayShowDateTime" serializeAs="String">
@@ -85,6 +85,9 @@
       </setting>
       <setting name="showDisplayFieldNumbers" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="customLogoPath2" serializeAs="String">
+        <value />
       </setting>
     </FTC_Timer_Display.Properties.Settings>
   </userSettings>
