--- a/FTC-Timer-Display/Properties/Settings.settings
+++ b/FTC-Timer-Display/Properties/Settings.settings
@@ -32,7 +32,7 @@
     <Setting Name="showHelp" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="customLogoPath" Type="System.String" Scope="User">
+    <Setting Name="customLogoPath1" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="displayShowDateTime" Type="System.Boolean" Scope="User">
@@ -61,6 +61,9 @@
     </Setting>
     <Setting Name="showDisplayFieldNumbers" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="customLogoPath2" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
