Allow user to add/remove additional adjustment second depending on environment.

--- a/FTC-Timer-Display/App.config
+++ b/FTC-Timer-Display/App.config
@@ -89,6 +89,9 @@
       <setting name="customLogoPath2" serializeAs="String">
         <value />
       </setting>
+      <setting name="extraSecond" serializeAs="String">
+        <value>False</value>
+      </setting>
     </FTC_Timer_Display.Properties.Settings>
   </userSettings>
   <applicationSettings>
