--- a/FTC-Timer-Display/Properties/Settings.settings
+++ b/FTC-Timer-Display/Properties/Settings.settings
@@ -65,5 +65,8 @@
     <Setting Name="customLogoPath2" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="extraSecond" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
